# git-editor

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci-cd.yaml  coverage.yml  github-pages.yml  multi-platform-test.yml  release.yaml  security.yml  test.yml
docs/: template.html
src/: args.rs  datetime.rs  docs.rs  lib.rs  main.rs  rewrite.rs  validator.rs
src/rewrite/: mod.rs  rewrite_all.rs  rewrite_range.rs  rewrite_specific.rs
src/utils/: commit_history.rs  datetime.rs  git_clone.rs  git_config.rs  help.rs  mod.rs  print_history.rs  prompt.rs  simulation.rs  types.rs  validator.rs
tests/: integration_tests.rs
