[package]
name = "git-editor"
version = "1.7.0"
edition = "2021"
description = "A command-line tool to edit git commit timestamps, messages, and author information"
license = "MIT"
homepage = "https://github.com/rohansen856/git_editor"
authors = ["Rohan Sen", "rohansen856@gmail.com"]
repository = "https://github.com/rohansen856/git_editor"

[dependencies]
git2 = "0.20.1"
clap = { version = "4.1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.1"
regex = "1.7"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
colored = "3.0.0"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
